# hgeometry

./: .gitattributes  .gitignore  .stylish-haskell.yaml  .travis.yml  README.md  build-wasm.sh  cabal.project  cabal.sandbox.config  cabal.wasm.project  changelog.md  doctests.hs  hackagedocs.sh  haddock.sh  haddock.txt  haddock_badge.json  hgeometry.cabal  hie.yaml  makeRelease.sh  release.sh  stack-ghc8.2.yaml  stack-ghc8.4.yaml  stack-ghc8.6.yaml  stack-ghc8.8.yaml  stack.yaml  todo.org
hgeometry/: README.md  RELEASE-0.12.md  benchmark_notes.org  benchmarks.prof  benchmarks.prof.html  changelog  changelog.org  doctests.hs  hgeometry.cabal  planargraph.hs  stack-haddock.yaml  stack.yaml
hgeometry-benchmarks/: hgeometry-benchmarks.cabal
hgeometry-benchmarks/src/: Benchmarks.hs  TriangWorldBench.hs
hgeometry-combinatorial/: README.md  changelog  changelog.org  changelog.txt  doctests.hs  hgeometry-combinatorial.cabal
hgeometry-combinatorial/bench/: ShuffleBench.hs
hgeometry-combinatorial/cbits/: erf.c
hgeometry-combinatorial/test/: CyclicSpec.hs  SetUtilSpec.hs  ShuffleSpec.hs  TrieSpec.hs
hgeometry-devel/: README.md  benchlog.org  hgeometry-devel.cabal  points_10k.json  vd_points_10k.json
hgeometry-devel/benchmark/: Bench.hs  Generate.hs  GenerateMain.hs  Prof.hs
hgeometry-examples/: README.md  hgeometry-examples.cabal
hgeometry-examples/3dviewer/: App.hs  Attr.hs  Main.hs  RenderProps.hs
hgeometry-examples/bapc2012/: Gunslinger.hs
hgeometry-examples/bapc2014/: Armybase.lhs  frank.lhs
hgeometry-examples/convexHull/: App.hs  Main.hs
hgeometry-examples/data/: ant2.ipe  antarctica.ipe  birds_only_20.csv  birds_only_3.csv  birds_only_3_easy.csv  simplepolygon.ipe  simplepolygon2.ipe  simplepolygon4.ipe  simplepolygon6.ipe  ymonotone.ipe
hgeometry-examples/draw/: Main.hs
hgeometry-examples/duality/: App.hs  Main.hs
hgeometry-examples/geojson/: Main.hs
hgeometry-examples/lineSegmentIntersection/: App.hs  Main.hs
hgeometry-examples/lowerEnv/: Main.hs
hgeometry-examples/polyLineDrawing/: App.hs  Main.hs
hgeometry-examples/polygonTriangulation/: Main.hs
hgeometry-examples/pub/: ghc_wasm_jsffi.js  index.html  index.js
hgeometry-examples/raytracer/: Main.hs  Settings.hs  Types.hs
hgeometry-examples/sampler/: Main.hs
hgeometry-examples/skia/: .ghci  Action.hs  App.hs  Attributes.hs  Base.hs  CanvasKit.hs  Color.hs  Extra.hs  GeometryStore.hs  Layers.hs  Main.hs  Model.hs  Modes.hs  MouseExtra.hs  Options.hs  PolyLineMode.hs  PolygonMode.hs  RectangleMode.hs  SelectMode.hs  SkiaCanvas.hs  StrokeAndFill.hs  ToolMenu.hs  index.html
hgeometry-examples/src/: Main.hs
hgeometry-examples/test/: bapc.hs
hgeometry-examples/triangulateWorld/: Main.hs
hgeometry-examples/voronoiDiagram/: App.hs  Main.hs
hgeometry-interactive/: README.md  changelog.org  hgeometry-interactive.cabal
hgeometry-interactive/app/: Main.hs
hgeometry-interactive/app_src/: ConvexHull.hs
hgeometry-interactive/old/: ConvexHull.hs  RenderUtil.hs
hgeometry-interactive/resources/: test.ipe
hgeometry-interactive/src/: MainFastDraw.hs  MainSDL.hs  MisoViewer.hs  Svg.hs
hgeometry-ipe/: README.md  changelog.org  doctests.hs  hgeometry-ipe.cabal  stack-haddock.yaml
hgeometry-ipe/data/: opacities.isy
hgeometry-ipe/docs/: coloredPoints.ipe
hgeometry-ipe/ipelet/: LibArith.hs  LibArith_stub.h  Makefile  hgeometry.lua  libarithhelper.c  main.lua
hgeometry-ipe/resources/: basic.isy
hgeometry-ipe/src/: Ipe.hs
hgeometry-ipe/test/: GenericSpec.hs
hgeometry-kernel/: README.md  changelog  doctests.hs  hgeometry-kernel.cabal
hgeometry-kernel/bench/: Benchmarks.hs  ManualV2.hs
hgeometry-kernel/test/: Point2Spec.hs
hgeometry-linesegmentintersection/: hgeometry-linesegmentintersection.cabal
hgeometry-point/: doctests.hs  hgeometry-point.cabal
hgeometry-point/sig-point/: Point.hsig
hgeometry-point/test/: Main.hs  Point2Spec.hs  PointSpec.hs
hgeometry-point/test-double/: DoubleSpec.hs
hgeometry-point/test-int/: IntSpec.hs
hgeometry-spline/: README.md  hgeometry-spline.cabal
hgeometry-svg/: README.md  doctests.hs  hgeometry-svg.cabal
hgeometry-svg/test/: Main.hs
hgeometry-test/: CHANGELOG.md  README.md  data  hgeometry-test.cabal  planargraph.hs
hgeometry-test/data/: polygons.multi  polygons.simple
hgeometry-test/src/: FromGeoJSON.hs  Main.hs
hgeometry-test/test/: Golden.hs  LineSegmentSpec_.hs
hgeometry-vector/: README.md  changelog.org  changelog.txt  doctests.hs  hgeometry-vector.cabal
hgeometry-vector/bench/: Benchmarks.hs
hgeometry-vector/boxed_src/: Boxed.hs
hgeometry-vector/dimensions/: Four.hs  One.hs  Three.hs  Two.hs
hgeometry-vector/numtypes/: Double.hs  Float.hs  Int.hs  IntervalReal.hs  Rational.hs  RawRational.hs
hgeometry-vector/numtypes_src/: Int32.hs
hgeometry-vector/optimal_src/: Optimal.hs
hgeometry-vector/sig-dim/: D.hsig
hgeometry-vector/sig-fractional/: R.hsig
hgeometry-vector/sig-num/: R.hsig
hgeometry-vector/sig-random/: R.hsig
hgeometry-vector/sig-unboxed/: R.hsig
hgeometry-vector/sig-vector/: Impl.hs  OrphanInstances.hs  ShowRead.hs  UnboxedVecImpl.hs  Vector.hsig
hgeometry-vector/src/: Elem.hsig  In.hsig  IntElem.hs  Out.hs  R.hsig  V0.hs  V1.hs  V4.hs
hgeometry-vector/src-cons/: In.hsig  Out.hs
hgeometry-vector/src-linear/: V1.hs  V2.hs
hgeometry-vector/src-unpacked/: Vector.hs  VectorD.hs
hgeometry-vector/src-unpacked-def/: VectorDef.hs
hgeometry-vector/src-v1/: V1.hs
hgeometry-vector/src-vectord/: VectorD.hs
hgeometry-vector/src_v2/: Vec2.hs
hgeometry-vector/test/: Main.hs  Vector2Spec.hs  VectorSpec.hs
hgeometry-vector/test-double/: DoubleSpec.hs  ShowSpec.hs
hgeometry-vector/test-int/: IntSpec.hs  ShowSpec.hs
hgeometry-vector/test-rational/: RationalSpec.hs
hgeometry-vector/unpacked_src/: R.hsig  Unpacked.hs  V2.hs  V3.hs  V4.hs  VLarge.hs
hgeometry-web/: LICENSE  README.md  hgeometry-web.cabal
hgeometry-web/app_src/: Viewer.hs
hgeometry-web/old/: CairoSimple.hs  ConvexHull.hs  Hipe.hs  Main.hs  MainSDL.hs  MainSelfContained.hs  RenderCanvas.hs
(+17030 files in other folders)
