name:                hgeometry-benchmarks
version:             0.9.0.0
synopsis:            HGeometry Benchmark sutie
description:
  The Benchmark suite for the HGeometry package.

homepage:            https://fstaals.net/software/hgeometry
license:             BSD3
license-file:        LICENSE
author:              Frank Staals
maintainer:          frank@fstaals.net
-- copyright:

tested-with:         GHC >= 8.2

category:            Geometry
build-type:          Simple

-- data-files:
                     -- in the future (cabal >=2.4) we can use
                     -- examples/**/*.in
                     -- examples/**/*.out

-- extra-source-files:  README.md
--                      changelog.org

Extra-doc-files:
                     -- docs/**/*.png

cabal-version:       2.0
source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry

benchmark benchmarks

  hs-source-dirs: ../hgeometry/benchmark ../hgeometry/test

  main-is: Benchmarks.hs
  type: exitcode-stdio-1.0

  other-modules: Benchmark.Util
                 Algorithms.Geometry.ConvexHull.Bench
                 Algorithms.Geometry.ConvexHull.GrahamV2
                 Algorithms.Geometry.ConvexHull.GrahamFam
                 Algorithms.Geometry.ConvexHull.GrahamFamPeano
                 Algorithms.Geometry.ConvexHull.GrahamFixed
                 Data.Geometry.Vector.VectorFamily6
                 Algorithms.Geometry.ConvexHull.GrahamFam6
                 Data.Geometry.IntervalTreeBench
                 -- Demo.ExpectedPairwiseDistance
                 -- Demo.TriangulateWorld
                 -- WSPDBench
                 Algorithms.Geometry.ClosestPair.Bench

                 Algorithms.Geometry.LineSegmentIntersection.Bench
                 Algorithms.Geometry.LineSegmentIntersection.BentleyOttmannOld

                 Algorithms.Geometry.PolygonTriangulation.Bench
                 Algorithms.Geometry.PolygonTriangulation.MakeMonotoneOld


  build-depends:
                base
              , criterion >= 1.1.4.0
              , fixed-vector
              , linear
              , semigroups
              , deepseq
              , deepseq-generics
              , hgeometry                       >= 0.8.0.0
              , hgeometry-combinatorial
              , hgeometry-ipe
              , lens
              , semigroupoids
              , QuickCheck
              , bytestring
              , containers
              , optparse-applicative
              , vinyl
              , vector
              , dlist
              , mtl


  ghc-options: -Wall -O2 -rtsopts -fno-warn-unticked-promoted-constructors

  default-language:    Haskell2010

  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , ViewPatterns
                    , LambdaCase
                    , TupleSections


                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable

                    , AutoDeriveTypeable

                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses
                    , OverloadedStrings
