cabal-version:      3.4
name:               hgeometry-combinatorial
version:            1.0.0.0
synopsis:
    Data structures, and Data types.
description:
    The Non-geometric data types and algorithms used in HGeometry.
license:            MIT
license-file:       LICENSE
homepage:            https://fstaals.net/software/hgeometry
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Geometry
build-type:         Simple
extra-source-files:  README.md
                     changelog
                     changelog.org
-- extra-source-files:

tested-with:
    GHC == 9.2.5
  , GHC == 9.4.4
  , GHC == 9.6.1

--------------------------------------------------------------------------------

common setup
    ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
                 -fspecialise-aggressively -fexpose-all-unfoldings
    build-depends:
        base                     >= 4.16.1.0    && < 5
      , containers               >= 0.6         && < 1
      , lens                     >= 5.2         && < 6
      , bifunctors               >= 4.1         && < 6
      , deepseq                  >= 1.1         && < 2
      , foldable1-classes-compat >= 0.1         && < 1
      , semigroupoids            >= 6.0.0.1     && < 7
      , semigroups               >= 0.18        && < 1
      , random                   >= 1.2         && < 2
      , mtl                      >= 2.2         && < 3
      , data-clist               >= 0.2         && < 1
      , vector                   >= 0.13        && < 1
      , vector-builder           >= 0.3.7       && < 1
      , vector-algorithms        >= 0.8         && < 1
      , nonempty-vector          >= 0.2.0.0     && < 1
      , vector-circular          >= 0.1.4       && < 1
      , linear                   >= 1.20        && < 2

      , aeson                    >= 2.0         && < 3
      , MonadRandom              >= 0.5         && < 1

      -- , witherable              >= 0.4
      -- , linear                  >= 1.21

      -- , ghc-typelits-natnormalise >= 0.7.7
      -- , ghc-typelits-knownnat     >= 0.7.6

    default-language: GHC2021

    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies

common quickcheck-setup
    build-depends:
        QuickCheck              >= 2.10
      , quickcheck-instances

common test-setup
    import: quickcheck-setup
    ghc-options:
         -Wall
         -fno-warn-unticked-promoted-constructors
         -fno-warn-partial-type-signatures
         -fno-warn-missing-signatures
         -fno-warn-type-defaults
         -fno-warn-orphans
    build-depends:
        hspec                 >= 2.9

--------------------------------------------------------------------------------
-- * Main Library

library
    import:           setup
    exposed-modules:
        HGeometry.Number.Real.Rational
        HGeometry.Number.Real.Symbolic
        HGeometry.Number.Ratio.Generalized
        HGeometry.Number.Radical
        HGeometry.Sign
        HGeometry.Indexed
        HGeometry.Foldable.Sort
        HGeometry.Foldable.Util

        HGeometry.List.Zipper
        HGeometry.List.Util

        HGeometry.NonEmpty.Util

        HGeometry.Vector.NonEmpty.Util

        HGeometry.Ext

        HGeometry.Unbounded
        HGeometry.Cyclic
        HGeometry.Permutation

        HGeometry.CircularList.Util

        HGeometry.Algorithms.DivideAndConquer
        HGeometry.Algorithms.BinarySearch
        HGeometry.Algorithms.LogarithmicMethod

        HGeometry.StringSearch.KMP

        HGeometry.Combinatorial.Util

        HGeometry.Measured
        HGeometry.Measured.Class
        HGeometry.Measured.Size
        HGeometry.Measured.Count

        HGeometry.Tree.Binary.Static
        HGeometry.Tree.Util

    -- other-modules:
    -- other-extensions:

    hs-source-dirs:   src

    -- build-depends:
    --     hgeometry-combinatorial:unpacked
    --   , hgeometry-combinatorial:shared

--------------------------------------------------------------------------------
-- * Helper Libraries

library quickcheck
    import: setup, quickcheck-setup
    visibility: public
    hs-source-dirs: src-quickcheck
    exposed-modules:
      HGeometry.Combinatorial.Instances
    build-depends:
         hgeometry-combinatorial

--------------------------------------------------------------------------------
-- * Tests

test-suite hgeometry-combinatorial-hspec
    import:           setup, test-setup
    type:             exitcode-stdio-1.0
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
       Spec
       Algorithms.DivideAndConquerSpec
       Algorithms.LogarithmicMethodSpec
       StringSearch.KMPSpec

    build-depends:
         hgeometry-combinatorial

--- --------------------------------------------------------------------------------
---
--- -- test-suite hgeometry-combinatorial-doctest
--- --     import:           setup, test-setup
--- --     type:             exitcode-stdio-1.0
--- --     hs-source-dirs:   doctest
--- --     main-is:          Main.hs
--- --     build-tool-depends: doctest-codegen-driver:doctest-codegen-driver
--- --     code-generators: doctest-codegen-driver
---
--- --     build-depends:
--- --          hgeometry-combinatorial:combinatorial2
--- --        , hgeometry-combinatorial:numtypes
--- --        , hgeometry-combinatorial:sig-combinatorial
--- --        , doctest
---
--- --     mixins:
--- --          hgeometry-combinatorial:numtypes (Int as R)
--- --        , hgeometry-combinatorial:sig-combinatorial
--- --            requires
--- --            ( Combinatorial          as HGeometry.Combinatorial.Combinatorial2
--- --            , Combinatorial.Additive as HGeometry.Combinatorial.Combinatorial2
--- --            , D               as HGeometry.Combinatorial.Combinatorial2
--- --            )


--------------------------------------------------------------------------------
-- * Benchmarks

-- common hgeometry-combinatorial-bench
--     import:           setup, test-setup
--     -- hs-source-dirs:   test
--     -- build-tool-depends: hspec-discover:hspec-discover
--     other-modules:
--     build-depends:
--        , hgeometry-combinatorial:numtypes
--        , hgeometry-combinatorial:unpacked
--        , hgeometry-combinatorial:shared
--        , tasty-bench              >= 0.3
--        , tasty                    >= 1.4

-- benchmark hgeometry-combinatorial-bench-int
--     import: setup, hgeometry-combinatorial-bench
--     hs-source-dirs: bench
--     main-is: Benchmarks.hs
--     type: exitcode-stdio-1.0
--     -- other-modules:
--     mixins:
--            hgeometry-combinatorial:numtypes (Int as R)
