name:                hgeometry-devel
version:             0.1.0.0
synopsis:            Developement package for hgeometry
-- description:
homepage:            https://github.com/noinia/hgeometry
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2020 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  hs-source-dirs:      src test
  default-language:    Haskell2010
  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , TupleSections
                    , LambdaCase
                    , ViewPatterns

                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable
                    , DeriveGeneric


                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses

  build-depends:
                base                    >= 4.11      &&     < 5
              , hgeometry-combinatorial >= 0.10.0.0
              , hgeometry               >= 0.10.0.0
              , hgeometry-ipe           >= 0.10.0.0

              , bifunctors              >= 4.1
              , bytestring              >= 0.10
              , containers              >= 0.5.9
              , dlist                   >= 0.7
              , lens                    >= 4.2
              , semigroupoids           >= 5
              , semigroups              >= 0.18
              -- , singletons              >= 2.0
              , linear                  >= 1.10
              , fixed-vector            >= 1.0
              , vector-builder          >= 0.3.7
              , vinyl                   >= 0.10
              , deepseq                 >= 1.1
              , fingertree              >= 0.1
              , MonadRandom             >= 0.5
              , QuickCheck              >= 2.5
              , quickcheck-instances    >= 0.3
              , reflection              >= 2.1
              , primitive               >= 0.6.3.0
              -- , witherable-class        >= 0
              , refined                 >= 0.4.4
              -- , singleton-typelits      >= 0.1.0.0

              -- , ghc-typelits-natnormalise >= 0.6
              -- , ghc-typelits-knownnat     >= 0.6

              , vector                  >= 0.11
              , data-clist              >= 0.1.2.3
              , text                    >= 1.1.1.0

              , aeson                   >= 1.0
              , yaml                    >= 0.8

              , mtl                     >= 2.2
              , template-haskell

              , hspec                   >= 2.7
              , hspec-core
              , QuickCheck, quickcheck-instances
              , random

              , criterion


  exposed-modules:
                   Algorithms.Geometry.ConvexHull.KineticDivideAndConquer
                   Algorithms.Geometry.ConvexHull.MinimalistImperative
                   Algorithms.Geometry.ConvexHull.Types
                   Algorithms.Geometry.ConvexHull.Helpers
                   Algorithms.Geometry.ConvexHull.Debug

                   Algorithms.Geometry.ConvexHull.RenderPLY

                   Algorithms.Geometry.ConvexHull.ConvexHull3DSpec



benchmark benchmarks

  hs-source-dirs: benchmark

  -- main-is: Benchmarks.hs
  main-is: Bench.hs

  type: exitcode-stdio-1.0

  -- other-modules:


  build-depends:
                base
              , criterion                      >= 1.1.4.0
              , linear
              , deepseq
              , deepseq-generics
              , hgeometry                       >= 0.10.0.0
              , hgeometry-combinatorial
              , hgeometry-ipe
              , hgeometry-devel
              , lens
              , semigroupoids
              , QuickCheck
              , bytestring
              , containers
              , optparse-applicative
              , vinyl
              , vector
              , dlist
              , mtl


  ghc-options: -Wall -O2 -rtsopts -fno-warn-unticked-promoted-constructors

  default-language:    Haskell2010

  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , ViewPatterns
                    , LambdaCase
                    , TupleSections


                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable

                    , AutoDeriveTypeable

                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses
                    , OverloadedStrings


executable hgeometry-devel-prof
  main-is: Prof.hs
  hs-source-dirs: benchmark

  build-depends: base
               , hgeometry               >= 0.10.0.0
               , hgeometry-combinatorial
               , hgeometry-ipe
               , hgeometry-devel
               , lens
               , QuickCheck              >= 2.5



  ghc-options: -Wall -O2 -rtsopts -fno-warn-unticked-promoted-constructors

  default-language:    Haskell2010

  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , ViewPatterns
                    , LambdaCase
                    , TupleSections


                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable

                    , AutoDeriveTypeable

                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses
                    , OverloadedStrings
