cabal-version:       2.4
name:                hgeometry-devel
version:             0.1.0.0
synopsis:            Developement package for hgeometry
-- description:
homepage:            https://github.com/noinia/hgeometry
license:             BSD-3-Clause
license-file:        LICENSE
author:              Frank Staals
maintainer:          frank@fstaals.net
copyright:           2020 Frank Staals
category:            Geometry
build-type:          Simple
extra-source-files:  README.md

common devel-setup
  ghc-options: -O2 -Wall -fno-warn-unticked-promoted-constructors -fno-warn-type-defaults
  default-language:    Haskell2010
  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes
                    , TypeApplications
                    , ScopedTypeVariables

                    , PatternSynonyms
                    , TupleSections
                    , LambdaCase
                    , ViewPatterns

                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable
                    , DeriveGeneric

                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses
                    , TypeApplications
                    , DerivingVia
                    , DerivingStrategies

  build-depends: base                    >= 4.11      &&     < 5
               , hgeometry-combinatorial >= 0.13.0.0
               , hgeometry               >= 0.13.0.0
               , hgeometry-ipe           >= 0.13.0.0

               , bifunctors              >= 4.1
               , bytestring              >= 0.10
               , containers              >= 0.5.9
               , dlist                   >= 0.7
               , lens                    >= 4.2
               , semigroupoids           >= 5
               , semigroups              >= 0.18
               -- , singletons              >= 2.0
               , linear                  >= 1.10
               , fixed-vector            >= 1.0
               , vector-builder          >= 0.3.7
               , vinyl                   >= 0.10
               , deepseq                 >= 1.1
               , fingertree              >= 0.1
               , MonadRandom             >= 0.5
               , QuickCheck              >= 2.5
               , quickcheck-instances    >= 0.3
               , reflection              >= 2.1
               , primitive               >= 0.6.3.0
               -- , witherable-class        >= 0
               , refined                 >= 0.4.4
               -- , singleton-typelits      >= 0.1.0.0

               -- , ghc-typelits-natnormalise >= 0.6
               -- , ghc-typelits-knownnat     >= 0.6

               , vector                  >= 0.11
               , data-clist              >= 0.1.2.3
               , text                    >= 1.1.1.0

               , aeson                   >= 1.0
               , yaml                    >= 0.8

               , mtl                     >= 2.2
               , template-haskell


library
  import: devel-setup
  hs-source-dirs: src
  build-depends: hspec                   >= 2.7
               , hspec-core
               , QuickCheck, quickcheck-instances
               , random
               , criterion

  exposed-modules:
                   Algorithms.Geometry.ConvexHull.Minimalist

                   Data.Geometry.Point.Random
                   PLY.Writer
  other-modules:
                   Algorithms.Geometry.ConvexHull.Minimalist.Hull
                   Algorithms.Geometry.ConvexHull.Minimalist.Point

benchmark benchmarks
  import: devel-setup
  hs-source-dirs: benchmark
  -- main-is: Benchmarks.hs
  main-is: Bench.hs
  type: exitcode-stdio-1.0
  other-modules: Generate
  build-depends: hgeometry-devel
               , random                  >= 1.2
               , criterion               >= 1.5

executable devel-prof
  import: devel-setup
  main-is: Prof.hs
  hs-source-dirs: benchmark
  other-modules: Generate
  build-depends: hgeometry-devel

test-suite hspec
  import: devel-setup
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  ghc-options:   -fno-warn-partial-type-signatures
                 -fno-warn-missing-signatures
  build-tool-depends: hspec-discover:hspec-discover

  other-modules: Algorithms.Geometry.ConvexHull.ConvexHull3DSpec

  build-depends: hgeometry-devel
               , hspec                   >= 2.7
               , hspec-core
               , QuickCheck
               , quickcheck-instances
               , random
