cabal-version:       2.4
name:                hgeometry-examples
version:             0.13
synopsis:            Examples for HGeometry
description:
    Examples of Geometric Algorithms implemented using HGeometry

homepage:            https://fstaals.net/software/hgeometry
license:             BSD-3-Clause
license-file:        LICENSE
author:              Frank Staals
maintainer:          frank@fstaals.net
-- copyright:

tested-with:         GHC >= 8.2

category:            Geometry
build-type:          Simple

data-files:          data/**/*.in
                     data/**/*.out
                     ../hgeometry-ipe/resources/opacities.isy
                     ../hgeometry-ipe/docs/coloredPoints.ipe
                     data/world.ipe

extra-source-files:  README.md
                     changelog.org

source-repository head
  type:     git
  location: https://github.com/noinia/hgeometry


executable hgeometry-examples
  main-is: Main.hs

  build-depends: base                    >= 4.11      &&     < 5
               , hgeometry               >= 0.13
               , hgeometry-combinatorial
               , hgeometry-ipe
               , lens
               , containers
               , vinyl
               , semigroups
               , optparse-applicative    >= 0.13.0.0
               , text
               , hexpat
               , bytestring
               , directory
               , time
               , random
               , QuickCheck
               , MonadRandom

  hs-source-dirs: src

  other-modules: Demo.DrawGPX
                 Demo.ExtractGPX
                 Demo.WriteEnsemble
                 Demo.MinDisk
                 Demo.Delaunay
                 Demo.ExpectedPairwiseDistance
                 Demo.TriangulateWorld
                 Demo.GPXParser
                 Demo.FloatingPoint
                 Demo.VisibilityPolygon

                 Ipe.GrowingDisks

  default-language: Haskell2010

  default-extensions: TypeFamilies
                    , GADTs
                    , KindSignatures
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , RankNTypes

                    , PatternSynonyms
                    , LambdaCase
                    , ViewPatterns

                    , StandaloneDeriving
                    , GeneralizedNewtypeDeriving
                    , DeriveFunctor
                    , DeriveFoldable
                    , DeriveTraversable

                    , DeriveDataTypeable

                    , FlexibleInstances
                    , FlexibleContexts
                    , MultiParamTypeClasses
                    , TypeApplications

test-suite bapc_examples
  type:          exitcode-stdio-1.0
  ghc-options:   -O2 -fno-warn-unticked-promoted-constructors
  main-is:       bapc.hs
  hs-source-dirs: test src
  build-depends: base
               , array                    >= 0.5
               , hgeometry
               , hgeometry-combinatorial
               , hgeometry-ipe            >= 0.14
               , lens
               , linear
               , semigroups
               , vector-circular

  other-modules: BAPC2012.Gunslinger
                 BAPC2014.Armybase

  default-language:    Haskell2010

  default-extensions: TypeFamilies
                    , GADTs
                    , DataKinds
                    , TypeOperators
                    , ConstraintKinds
                    , PolyKinds
                    , PatternSynonyms
                    , ViewPatterns
